err/lovely.recipe.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lovely'...
Listing './lib/python3.5/site-packages/lovely/recipe'...
Listing './lib/python3.5/site-packages/lovely/recipe/egg'...
Listing './lib/python3.5/site-packages/lovely/recipe/fs'...
Listing './lib/python3.5/site-packages/lovely/recipe/i18n'...
Compiling './lib/python3.5/site-packages/lovely/recipe/i18n/i18nextract.py'...
***   File "./lib/python3.5/site-packages/lovely/recipe/i18n/i18nextract.py", line 101
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/recipe/i18n/i18nmergeall.py'...
***   File "./lib/python3.5/site-packages/lovely/recipe/i18n/i18nmergeall.py", line 61
    print 'Merging language "%s", domain "%s"' %(language, domain)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/recipe/i18n/i18nstats.py'...
***   File "./lib/python3.5/site-packages/lovely/recipe/i18n/i18nstats.py", line 106
    print 'Language    Total    Done    Not Done    Fuzzy      Done %'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lovely/recipe/importchecker'...
Compiling './lib/python3.5/site-packages/lovely/recipe/importchecker/importchecker.py'...
***   File "./lib/python3.5/site-packages/lovely/recipe/importchecker/importchecker.py", line 302
    print "Please provide a valid path %r" % path
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lovely/recipe/zeo'...
Listing './lib/python3.5/site-packages/lovely/recipe/zope'...
Listing './lib/python3.5/site-packages/lovely.recipe-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
